# boron

./: Cargo.toml  LICENSE  cliff.toml  clippy.toml  justfile
casadei/: Cargo.toml
casadei/src/: app.rs  directives.rs  main.rs  output.rs  runner.rs  test.rs
casadei/src/runner/: directives.rs  in_process.rs  mod.rs  panic.rs  subprocess.rs
compiler_cli/: Cargo.toml
compiler_cli/src/: cli.rs  main.rs  panic.rs
crates/boron_analysis/: Cargo.toml
crates/boron_analysis/src/: align_of.rs  checking.rs  collector.rs  errors.rs  formatter.rs  lib.rs  monomorphizations.rs  size_of.rs  table.rs  ty.rs  ty_lower.rs  unify.rs  vars.rs
crates/boron_analysis/src/builtin/: builtins.rs  expander.rs  mod.rs  results.rs
crates/boron_analysis/src/builtin/functions/: mod.rs  os.rs  size_of.rs
crates/boron_analysis/src/checker/: call.rs  comptime.rs  debug.rs  expr.rs  field.rs  mod.rs  path.rs  pattern.rs  stmt.rs  struct_init.rs  unary.rs
crates/boron_analysis/src/interpreter/: mod.rs  stack.rs  utils.rs  values.rs
crates/boron_analysis/src/literals/: float.rs  int.rs  literal_table.rs  mod.rs
crates/boron_analysis/src/validator/: errors.rs  mod.rs  types.rs
crates/boron_c_compiler/: Cargo.toml
crates/boron_c_compiler/src/: compiler.rs  detect.rs  lib.rs
crates/boron_cli/: Cargo.toml
crates/boron_cli/src/: clap_styles.rs  cli.rs  lib.rs  logger.rs  project_toml.rs
crates/boron_codegen/: Cargo.toml
crates/boron_codegen/src/: codegen.rs  enums.rs  function.rs  lib.rs  output.rs  structs.rs  types.rs
crates/boron_codegen/src/blocks/: generator.rs  mod.rs
crates/boron_codegen/src/expressions/: binary_op.rs  blocks.rs  calls.rs  literals.rs  mod.rs
crates/boron_codegen/src/llvm/: function.rs  mod.rs  output.rs  structs.rs  types.rs
crates/boron_codegen/src/llvm/blocks/: generator.rs  mod.rs
crates/boron_codegen/src/llvm/expressions/: binary_op.rs  calls.rs  literals.rs  mod.rs
crates/boron_context/: Cargo.toml
crates/boron_context/src/: id_interner.rs  lib.rs
crates/boron_context/src/queries/: mod.rs  provider.rs  queries.rs  query_macro.rs
crates/boron_core/: Cargo.toml
crates/boron_core/src/: check.rs  errors.rs  lib.rs  unit.rs
crates/boron_diagnostics/: Cargo.toml
crates/boron_diagnostics/src/: codes.rs  ctx.rs  diagnostics.rs  fmt.rs  lib.rs  output_type.rs  writer.rs
crates/boron_diagnostics/src/emitters/: fmt.rs  mod.rs  show.rs
crates/boron_diagnostics/src/emitters/human_readable/: chars.rs  label.rs  margins.rs  mod.rs  source_groups.rs
crates/boron_hir/: Cargo.toml
crates/boron_hir/src/: expr.rs  generics.rs  hir.rs  ids.rs  item.rs  lib.rs  pat.rs  semantic_type.rs  ty.rs
crates/boron_hir/src/lower/: context.rs  expr.rs  item.rs  mod.rs  pat.rs  ty.rs
crates/boron_ir/: Cargo.toml
crates/boron_ir/src/: exprs.rs  ir.rs  items.rs  lib.rs  lowerer.rs  mangler.rs
crates/boron_ir/src/cfg/: lowerer.rs  mod.rs
crates/boron_lib/: Cargo.toml
crates/boron_lib/src/: builder.rs  container.rs  lib.rs  library.rs  lowerer.rs
crates/boron_linking/: Cargo.toml
crates/boron_linking/src/: build.rs  detect.rs  lib.rs
crates/boron_linking/src/linkers/: gold.rs  ld.rs  lld.rs  mod.rs  mold.rs  msvc.rs
crates/boron_parser/: Cargo.toml
crates/boron_parser/src/: lib.rs  module.rs
crates/boron_parser/src/ast/: expressions.rs  generics.rs  import.rs  items.rs  mod.rs  params.rs  program.rs  statements.rs  types.rs
crates/boron_parser/src/lexer/: lexer.rs  lexer_errors.rs  mod.rs  tokens.rs
crates/boron_parser/src/lexer/impls/: comments.rs  idents.rs  numbers.rs  ops.rs  strings.rs  whitespaces.rs
crates/boron_parser/src/parser/: errors.rs  expr.rs  mod.rs  parameters.rs  parser.rs  path.rs  patterns.rs  program.rs  statements.rs  ty.rs
crates/boron_parser/src/parser/items/: enums.rs  functions.rs  import.rs  mod.rs  structs.rs
crates/boron_queries_macro/: Cargo.toml
crates/boron_queries_macro/src/: lib.rs
crates/boron_resolver/: Cargo.toml
crates/boron_resolver/src/: builtin_kind.rs  collector.rs  def.rs  errors.rs  import_order.rs  import_resolution.rs  lib.rs  module_resolver.rs  resolver.rs  ribs.rs  scope.rs  symbol.rs  visitor.rs
crates/boron_session/: Cargo.toml
crates/boron_session/src/: dependency.rs  lib.rs  library.rs  module_graph.rs  package_graph.rs  path.rs  project_config.rs  session.rs
crates/boron_session/src/enums/: lib_type.rs  mode.rs  project_type.rs
crates/boron_source/: Cargo.toml
crates/boron_source/src/: def_id.rs  id.rs  ident_table.rs  lib.rs  line.rs  sources.rs  span.rs
crates/boron_thir/: Cargo.toml
crates/boron_thir/src/: exprs.rs  fold.rs  items.rs  lib.rs  lowerer.rs
crates/boron_types/: Cargo.toml
crates/boron_types/src/: comptime.rs  infer_ty.rs  lib.rs  literal_table.rs  thir.rs  tokens.rs  type_table.rs
crates/boron_types/src/ast/: expressions.rs  generics.rs  import.rs  items.rs  mod.rs  module.rs  params.rs  program.rs  statements.rs  types.rs
crates/boron_types/src/hir/: expr.rs  generics.rs  hir.rs  ids.rs  item.rs  mod.rs  pat.rs  semantic_type.rs  ty.rs
crates/boron_types/src/ir/: exprs.rs  items.rs  mod.rs
crates/boron_types/src/resolver/: def.rs  import_order.rs  mod.rs  resolver.rs  ribs.rs  scope.rs  symbol.rs
crates/boron_utils/: Cargo.toml
crates/boron_utils/src/: context.rs  dependency.rs  errors.rs  lib.rs  path.rs  project_config.rs  session.rs
crates/boron_utils/src/enums/: project_type.rs
crates/zirael_analysis/: Cargo.toml
crates/zirael_analysis/src/: checking.rs  collector.rs  errors.rs  lib.rs  size_of.rs  table.rs  ty.rs  ty_formatter.rs  ty_lower.rs  unify.rs  vars.rs
crates/zirael_analysis/src/builtin/: builtins.rs  expander.rs  mod.rs  results.rs
crates/zirael_analysis/src/interpreter/: mod.rs  stack.rs  values.rs
crates/zirael_analysis/src/literals/: int.rs  literal_table.rs
crates/zirael_analysis/src/validator/: errors.rs  mod.rs  types.rs
crates/zirael_comptime/: Cargo.toml
crates/zirael_comptime/src/: lib.rs
crates/zirael_comptime/src/validator/: errors.rs  types.rs
playground/: project.toml
(+179 files in other folders)
