[package]
name = "boron"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "boron Compiler"

[dependencies]
clap = { workspace = true }
boron_cli = { workspace = true }
boron_core = { workspace = true }

[lints]
workspace = true

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
