[package]
name = "boron_analysis"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
boron_diagnostics = { workspace = true }
boron_hir = { workspace = true }
boron_parser = { workspace = true }
boron_resolver = { workspace = true }
boron_utils = { workspace = true }
boron_source = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
num-bigint = "0.4.6"
boron_diagnostic_macro = { workspace = true }
num-traits = "0.2.19"
once_cell = "1.21.3"

[lints]
workspace = true
