[package]
name = "boron_analysis"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
boron_diagnostics = { workspace = true }
boron_hir = { workspace = true }
boron_parser = { workspace = true }
boron_resolver = { workspace = true }
boron_session = { workspace = true }
boron_source = { workspace = true }
dashmap = { workspace = true }
boron_diagnostic_macro = { workspace = true }
rustc_apfloat = { workspace = true }
itertools = { workspace = true }
log = "0.4.29"

[lints]
workspace = true
