[package]
name = "boron_c_compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
boron_utils = { workspace = true }
serde = { workspace = true }
thiserror = "2.0.16"
which = { workspace = true }
indicatif = "0.18.0"
fs-err = { workspace = true }

[lints]
workspace = true
