[package]
name = "boron_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "boron CLI support"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
boron_utils = { workspace = true }
boron_diagnostics = { workspace = true }
yansi = { workspace = true }

[lints]
workspace = true
