[package]
name = "boron_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "boron CLI support"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
boron_session = { workspace = true }
boron_diagnostics = { workspace = true }
boron_target = { workspace = true }
yansi = { workspace = true }
fs-err = { workspace = true }
chrono = "0.4.44"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
boron_lib = { workspace = true }

[lints]
workspace = true
