[package]
name = "boron_codegen"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
boron_ir = { workspace = true }
boron_target = { workspace = true }
boron_utils = { workspace = true }
inkwell = { version = "0.8.0", features = ["llvm17-0"] }
boron_parser = { workspace = true }
dashmap = { workspace = true }
itertools = { workspace = true }
boron_analysis = { workspace = true }
boron_resolver = { workspace = true }
anyhow = { workspace = true }
fs-err = { workspace = true }
boron_hir = { workspace = true }

[lints]
workspace = true
