[package]
name = "boron_codegen"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
boron_ir = { workspace = true }
boron_target = { workspace = true }
boron_session = { workspace = true }
inkwell = { workspace = true }
boron_parser = { workspace = true }
dashmap = { workspace = true }
boron_analysis = { workspace = true }
boron_resolver = { workspace = true }
anyhow = { workspace = true }
fs-err = { workspace = true }
boron_hir = { workspace = true }

[lints]
workspace = true
