[package]
name = "boron_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "boron Core"

[dependencies]
boron_parser = { workspace = true }
boron_resolver = { workspace = true }
boron_hir = { workspace = true }
boron_session = { workspace = true }
boron_diagnostics = { workspace = true }
boron_diagnostic_macro = { workspace = true }
anyhow = { workspace = true }
boron_compiler = { workspace = true }
fs-err = { workspace = true }
boron_source = { workspace = true }
boron_analysis = { workspace = true }
boron_ir = { workspace = true }
boron_codegen = { workspace = true }
boron_thir = { workspace = true }

[lints]
workspace = true
