[package]
name = "boron_diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "boron diagnostics"

[dependencies]
anyhow = { workspace = true }
dashmap = { workspace = true }
generational-arena = { workspace = true }
parking_lot = { workspace = true }
boron_source = { workspace = true }
yansi = { workspace = true }
unicode-width = "0.2.1"
log = { workspace = true }
derivative = { workspace = true }

[lints]
workspace = true
