[package]
name = "boron_hir"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
boron_diagnostics = { workspace = true }
boron_parser = { workspace = true }
boron_resolver = { workspace = true }
boron_source = { workspace = true }
boron_session = { workspace = true }
dashmap = { workspace = true }
itertools = { workspace = true }

[lints]
workspace = true
