[package]
name = "boron_lib"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
ar = { workspace = true }
serde = { workspace = true }
postcard = { version = "1.1.3", features = ["alloc"] }
boron_target = { workspace = true }
boron_session = { workspace = true }
fs-err = { workspace = true }
itertools = { workspace = true }
anyhow = { workspace = true }
boron_source = { workspace = true }
boron_types = { workspace = true }
boron_context = { workspace = true }

[lints]
workspace = true
