[package]
name = "boron_linking"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
boron_session = { workspace = true }
boron_target = { workspace = true }
serde = { workspace = true }
thiserror = "2.0.16"
which = { workspace = true }
yansi = { workspace = true }
fs-err = { workspace = true }
find-msvc-tools = "0.1.9"

[lints]
workspace = true
