[package]
name = "boron_parser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
unicode-xid = "0.2.6"
unicode-normalization = "0.1.25"
boron_session = { workspace = true }
boron_diagnostics = { workspace = true }
boron_diagnostic_macro = { workspace = true }
boron_source = { workspace = true }
stringcase = "0.4.0"
boron_target = { workspace = true }
indexmap = { workspace = true }
boron_types = { workspace = true }

[lints]
workspace = true
