[package]
name = "boron_queries_macro"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }
boron_diagnostics = { workspace = true }
