[package]
name = "boron_resolver"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
dashmap = { workspace = true }
parking_lot = { workspace = true }
petgraph = { workspace = true }
boron_diagnostic_macro = { workspace = true }
boron_diagnostics = { workspace = true }
boron_parser = { workspace = true }
boron_source = { workspace = true }
boron_utils = { workspace = true }

[lints]
workspace = true
