[package]
name = "boron_resolver"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
dashmap = { workspace = true }
boron_diagnostic_macro = { workspace = true }
boron_diagnostics = { workspace = true }
boron_parser = { workspace = true }
boron_source = { workspace = true }
boron_session = { workspace = true }
boron_types = { workspace = true }
boron_context = { workspace = true }

[lints]
workspace = true
