[package]
name = "boron_thir"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
boron_hir = { workspace = true }
boron_analysis = { workspace = true }
boron_diagnostics = { workspace = true }
boron_source = { workspace = true }
boron_types = { workspace = true }
boron_resolver = { workspace = true }
boron_parser = { workspace = true }
dashmap = { workspace = true }
boron_context = { workspace = true }

[lints]
workspace = true
