[package]
name = "boron_types"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
boron_source = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
strum = { workspace = true }
boron_target = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
petgraph = { workspace = true }
boron_diagnostic_macro = { workspace = true }
boron_diagnostics = { workspace = true }
rustc_apfloat = { workspace = true }

[lints]
workspace = true
