[package]
name = "boron_utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "boron Utils"

[dependencies]
anstyle = { workspace = true }
anyhow = { workspace = true }
fs-err = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
boron_source = { workspace = true }
boron_diagnostics = { workspace = true }
petgraph = { workspace = true }
dashmap = { workspace = true }
boron_target = { workspace = true }

[lints]
workspace = true
