[package]
name = "zirael_comptime"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
zirael_hir = { workspace = true }
zirael_utils = { workspace = true }
zirael_resolver = { workspace = true }
zirael_diagnostic_macro = { workspace = true }
zirael_diagnostics = { workspace = true }

[lints]
workspace = true
